--- a/resources/private/html/partials/sidebar/with_secondary_navigation.mustache
+++ b/resources/private/html/partials/sidebar/with_secondary_navigation.mustache
@@ -32,7 +32,7 @@
           Routes
         </a>
 
-        <a href="/admin/postgresql" class="text-gray-600 hover:bg-gray-50 hover:text-gray-900 group flex items-center px-2 py-2 text-sm font-medium rounded-md">
+        <a href="/admin/postgresql/overview" class="text-gray-600 hover:bg-gray-50 hover:text-gray-900 group flex items-center px-2 py-2 text-sm font-medium rounded-md">
           <!-- Heroicon name: calendar -->
           <svg class="text-gray-400 group-hover:text-gray-500 mr-3 h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" />
