--- a/resources/private/html/partials/header.mustache
+++ b/resources/private/html/partials/header.mustache
@@ -5,6 +5,6 @@
 
         <title>{{header.title}}</title>
         <link rel="stylesheet" type="text/css" href="/admin/css/tw-core.css">
-        {{! <script src="https://unpkg.com/htmx.org@1.0.2"></script> }}
+        <script src="https://unpkg.com/htmx.org@1.0.2"></script>
         <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.8.0/dist/alpine.min.js" defer></script>
     </head>
