--- a/resources/private/html/partials/backend/postgresql/tables.create.mustache
+++ b/resources/private/html/partials/backend/postgresql/tables.create.mustache
@@ -1,1 +1,40 @@
+<!--
+  This example requires Tailwind CSS v2.0+ 
+  
+  This example requires some changes to your config:
+  
+  ```
+  // tailwind.config.js
+  module.exports = {
+    // ...
+    plugins: [
+      // ...
+      require('@tailwindcss/forms'),
+    ]
+  }
+  ```
+-->
+
+        <link rel="stylesheet" type="text/css" href="/admin/css/tw-core.css">
+        <script src="https://unpkg.com/htmx.org@1.0.2"></script>
+        <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.8.0/dist/alpine.min.js" defer></script>
+
 CREATE TABLE
+<form
+  class="space-y-8 divide-y divide-gray-200"
+  data-hx-post="/admin/postgresql/tables/create">
+  <div>
+    <div>
+      <h3 class="text-lg leading-6 font-medium text-gray-900">
+        Select your Schema
+      </h3>
+      <div class="w-64">
+        {{#schemas}}
+        {{> select_menus.with_check_on_left}}
+        {{/schemas}}
+
+      </div>
+
+  </div>
+  </div>
+</form>
