--- a/resources/private/html/partials/backend/postgresql/tables.create.mustache
+++ b/resources/private/html/partials/backend/postgresql/tables.create.mustache
@@ -23,7 +23,7 @@ CREATE TABLE
 <form
   class="space-y-8 divide-y divide-gray-200"
   data-hx-post="/admin/postgresql/tables/create">
-  <div>
+  <div class="space-y-6">
     <div>
       <h3 class="text-lg leading-6 font-medium text-gray-900">
         Select your Schema
@@ -32,9 +32,19 @@ CREATE TABLE
         {{#schemas}}
         {{> select_menus.with_check_on_left}}
         {{/schemas}}
-
       </div>
-
-  </div>
+    </div>
+    <div>
+      <h3 class="text-lg leading-6 font-medium text-gray-900">
+        Table Name
+      </h3>
+      <div class="w-64">
+        {{#table_name}}
+          {{#input_group}}
+          {{> input_groups.with_hidden_label}}
+          {{/input_group}}
+        {{/table_name}}
+      </div>
+    </div>
   </div>
 </form>
